# timIRC-server

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.hpp  configparser.cpp  configparser.hpp  iconfiguration.hpp  logger.hpp  main.cpp
resources/: config.json
